--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_distribution.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_distribution.yaml
@@ -103,6 +103,26 @@ select_permissions:
                   is_deleted:
                     _eq: false
       allow_aggregations: true
+  - role: reportgenerator
+    permission:
+      columns:
+        - id
+        - num_requests
+        - p100
+        - p50
+        - p66
+        - p75
+        - p80
+        - p90
+        - p95
+        - p98
+        - p99
+        - identifier
+        - method
+        - name
+        - timestamp
+        - execution_id
+      filter: {}
   - role: tenantadmin
     permission:
       columns:
