--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_result_aggregate.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_result_aggregate.yaml
@@ -75,6 +75,19 @@ select_permissions:
                   is_deleted:
                     _eq: false
       allow_aggregations: true
+  - role: reportgenerator
+    permission:
+      columns:
+        - id
+        - number_of_errors
+        - number_of_fails
+        - number_of_successes
+        - number_of_users
+        - average_response_time
+        - timestamp
+        - execution_id
+        - average_response_size
+      filter: {}
   - role: tenantadmin
     permission:
       columns:
