--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_errors.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_execution_errors.yaml
@@ -58,7 +58,9 @@ select_permissions:
         - name
         - timestamp
         - execution_id
-      filter: {}
+      filter:
+        execution_id:
+          _eq: X-Hasura-Reportgenerator-Id
   - role: tenantadmin
     permission:
       columns:
