[back] - adding tooltip to meta - adding tooltips for execution params - granting necessary permissions on public.parameter.tooltip [front] - adding tooltip to Field component - adding static tooltip to schema (Repository) - passing tooltip field in inputProps where applicable (field generators, maps) - adding tooltip to GET_PARAMETERS gql (minor fixes) - added missing deps to TestSourceForm useEffect - [ACBT-583] added fallback to Nav Selector to avoid situation in which selected value was not yet loaded in options collection

--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_parameter.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_parameter.yaml
@@ -23,6 +23,7 @@ select_permissions:
         - param_name
         - param_type
         - slug_name
+        - tooltip
         - type_slug
       filter: {}
       allow_aggregations: true
@@ -35,19 +36,21 @@ select_permissions:
         - param_name
         - param_type
         - slug_name
+        - tooltip
         - type_slug
       filter: {}
       allow_aggregations: true
   - role: tenantadmin
     permission:
       columns:
+        - default_value
         - id
         - name
-        - param_type
-        - default_value
         - param_name
-        - type_slug
+        - param_type
         - slug_name
+        - tooltip
+        - type_slug
       filter: {}
       allow_aggregations: true
   - role: tester
@@ -59,19 +62,21 @@ select_permissions:
         - param_name
         - param_type
         - slug_name
+        - tooltip
         - type_slug
       filter: {}
       allow_aggregations: true
   - role: testrunner
     permission:
       columns:
+        - default_value
         - id
         - name
-        - param_type
-        - default_value
         - param_name
-        - type_slug
+        - param_type
         - slug_name
+        - tooltip
+        - type_slug
       filter:
         configuration_parameter:
           configuration:
