--- a/bolt-api/apps/bolt_api/app/appgraph/configuration/tests/fixtures/TestConfigurationMutations.test_delete_conf.yaml
+++ b/bolt-api/apps/bolt_api/app/appgraph/configuration/tests/fixtures/TestConfigurationMutations.test_delete_conf.yaml
@@ -5,7 +5,7 @@
             "request": {
                 "method": "POST",
                 "uri": "http://localhost:8080/v1alpha1/graphql",
-                "body": "{\"query\": \"mutation ($pk: uuid!, $userId: uuid!) {\\n  update_configuration(where: {id: {_eq: $pk}, is_deleted: {_eq: false}, project: {userProjects: {user_id: {_eq: $userId}}, is_deleted: {_eq: false}}}, _set: {is_deleted: true}) {\\n    affected_rows\\n    returning {\\n      id\\n      name\\n      type_slug\\n      project_id\\n      test_source_id\\n    }\\n  }\\n}\\n\", \"variables\": {\"pk\": \"7262d765-4d18-48a9-9d08-dd142ce8dab5\", \"userId\": \"7f1aab7a-e941-46a2-b63a-5b28b80ad384\"}}",
+                "body": "{\"query\": \"mutation ($pk: uuid!, $userId: String!) {\\n  update_configuration(where: {id: {_eq: $pk}, is_deleted: {_eq: false}, project: {userProjects: {user_id: {_eq: $userId}}, is_deleted: {_eq: false}}}, _set: {is_deleted: true}) {\\n    affected_rows\\n    returning {\\n      id\\n      name\\n      type_slug\\n      project_id\\n      test_source_id\\n    }\\n  }\\n}\\n\", \"variables\": {\"pk\": \"7262d765-4d18-48a9-9d08-dd142ce8dab5\", \"userId\": \"7f1aab7a-e941-46a2-b63a-5b28b80ad384\"}}",
                 "headers": {
                     "User-Agent": [
                         "python-requests/2.21.0"
