--- a/bolt-portal/package.json
+++ b/bolt-portal/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@auth0/auth0-react": "^1.10.2",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
