- adding structure for external results represented here: https://acaisoft.atlassian.net/wiki/spaces/AC/pages/1731854412/External+tests+data+structure
task: ACBT-615

--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/tables.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/tables.yaml
@@ -4,6 +4,7 @@
 - "!include public_configuration_extension.yaml"
 - "!include public_configuration_parameter.yaml"
 - "!include public_configuration_type.yaml"
+- "!include public_custom_field.yaml"
 - "!include public_execution.yaml"
 - "!include public_execution_additional_data.yaml"
 - "!include public_execution_distribution.yaml"
@@ -18,12 +19,17 @@
 - "!include public_execution_stage_log.yaml"
 - "!include public_execution_users.yaml"
 - "!include public_extension_params.yaml"
+- "!include public_external_test_scenario.yaml"
+- "!include public_group.yaml"
 - "!include public_parameter.yaml"
 - "!include public_project.yaml"
 - "!include public_repository.yaml"
 - "!include public_result_aggregate.yaml"
 - "!include public_result_error.yaml"
+- "!include public_test_case.yaml"
 - "!include public_test_creator.yaml"
+- "!include public_test_result.yaml"
+- "!include public_test_run.yaml"
 - "!include public_test_source.yaml"
 - "!include public_user_project.yaml"
 - "!include public_user_registration_token.yaml"
