--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_test_result.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_test_result.yaml
@@ -2,26 +2,22 @@ table:
   schema: public
   name: test_result
 object_relationships:
+  - name: test_case
+    using:
+      foreign_key_constraint_on: test_case_id
   - name: test_run
     using:
       foreign_key_constraint_on: test_run_id
-array_relationships:
-  - name: test_cases
-    using:
-      foreign_key_constraint_on:
-        column: test_result_id
-        table:
-          schema: public
-          name: test_case
 insert_permissions:
   - role: tenantadmin
     permission:
       check: {}
       columns:
-        - id
-        - result
-        - message
         - duration
+        - id
+        - message
+        - result
+        - test_case_id
         - test_run_id
       backend_only: false
 select_permissions:
@@ -29,9 +25,10 @@ select_permissions:
     permission:
       columns:
         - duration
+        - id
         - message
         - result
-        - id
+        - test_case_id
         - test_run_id
       filter: {}
 update_permissions:
@@ -39,9 +36,10 @@ update_permissions:
     permission:
       columns:
         - duration
+        - id
         - message
         - result
-        - id
+        - test_case_id
         - test_run_id
       filter: {}
       check: null
