- tweaked configuration create validation - added supported test types - critical schema changes (external_test_scenarios = configuration) - added dynamic validation form schema
task: ACBT-613

--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration.yaml
@@ -40,6 +40,13 @@ array_relationships:
         table:
           schema: public
           name: execution
+  - name: test_runs
+    using:
+      foreign_key_constraint_on:
+        column: scenario_id
+        table:
+          schema: public
+          name: test_run
 select_permissions:
   - role: manager
     permission:
