--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/tables.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/tables.yaml
@@ -21,6 +21,7 @@
 - "!include public_execution_users.yaml"
 - "!include public_extension_params.yaml"
 - "!include public_group.yaml"
+- "!include public_monitoring_metric.yaml"
 - "!include public_parameter.yaml"
 - "!include public_project.yaml"
 - "!include public_repository.yaml"
