- minor deprecations fixes - fixing/update existing tests structure - removing unused healthcheck references - removing unused image_processing and uploads references - adding a few tests

--- a/bolt-api/Makefile
+++ b/bolt-api/Makefile
@@ -2,7 +2,7 @@ create_package:
 	python3 setup.py sdist bdist_wheel
 
 run_tests:
-	python -m unittest
+	PYTHONPATH='.' pytest --cov-report term-missing --cov=apps --cov=services unittest
 
 hasura_migration_mac:
 	kubectl port-forward $(shell kubectl get svc -A -o name | grep bolt-api) 5000:80 &
