--- a/bolt-api/Makefile
+++ b/bolt-api/Makefile
@@ -2,7 +2,12 @@ create_package:
 	python3 setup.py sdist bdist_wheel
 
 run_tests:
-	PYTHONPATH='.' pytest --cov-report term-missing --cov=apps --cov=services unittests -W ignore::DeprecationWarning
+	PYTHONPATH='.' pytest \
+		--cov-report term-missing \
+		--cov=apps \
+		--cov=services unittests \
+		-W ignore::DeprecationWarning \
+		-W ignore::pytest.PytestCollectionWarning
 
 hasura_migration_mac:
 	kubectl port-forward $(shell kubectl get svc -A -o name | grep bolt-api) 5000:80 &
