[ACBT-732] Add prometheus_url field to migration

--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration.yaml
@@ -131,6 +131,7 @@ select_permissions:
         - name
         - performed
         - project_id
+        - prometheus_url
         - test_source_id
         - type_slug
       filter:
