--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_monitoring_metric.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_monitoring_metric.yaml
@@ -1,6 +1,13 @@
 table:
   schema: public
   name: monitoring_metric
+object_relationships:
+  - name: configuration_monitoring
+    using:
+      foreign_key_constraint_on: monitoring_id
+  - name: execution
+    using:
+      foreign_key_constraint_on: execution_id
 insert_permissions:
   - role: tenantadmin
     permission:
