--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_project.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_project.yaml
@@ -106,3 +106,13 @@ select_permissions:
           - is_deleted:
               _eq: false
       allow_aggregations: true
+delete_permissions:
+  - role: tenantadmin
+    permission:
+      filter:
+        _and:
+          - userProjects:
+              user_id:
+                _eq: X-Hasura-User-Id
+          - is_deleted:
+              _eq: false
