- adding pagination to external scenarios runs page - granting critical aggregate permission to tenantadmin
task: ACBT-749

--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration_monitoring.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration_monitoring.yaml
@@ -44,7 +44,20 @@ select_permissions:
         - query
         - configuration_id
         - id
-      filter: {}
+      filter:
+        _and:
+          - configuration:
+              is_deleted:
+                _eq: false
+          - configuration:
+              project:
+                is_deleted:
+                  _eq: false
+          - configuration:
+              project:
+                userProjects:
+                  user_id:
+                    _eq: X-Hasura-User-Id
 update_permissions:
   - role: tenantadmin
     permission:
