--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_test_run.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_test_run.yaml
@@ -49,6 +49,7 @@ select_permissions:
         - id
         - scenario_id
       filter: {}
+      allow_aggregations: true
 update_permissions:
   - role: tenantadmin
     permission:
