--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration_monitoring.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration_monitoring.yaml
@@ -41,23 +41,11 @@ select_permissions:
     permission:
       columns:
         - chart_type
-        - query
         - configuration_id
         - id
-      filter:
-        _and:
-          - configuration:
-              is_deleted:
-                _eq: false
-          - configuration:
-              project:
-                is_deleted:
-                  _eq: false
-          - configuration:
-              project:
-                userProjects:
-                  user_id:
-                    _eq: X-Hasura-User-Id
+        - query
+        - unit
+      filter: {}
 update_permissions:
   - role: tenantadmin
     permission:
