- removing redundant image upload pieces - adding report artifacts to gitignore

--- a/bolt-api/.gitignore
+++ b/bolt-api/.gitignore
@@ -7,3 +7,4 @@ hasura-dev/
 charts/bolt-api/files/secrets.py
 instance/localhost-secrets.py
 instance/acai-bolt-356aea83d223.json
+/unit_tests_results.xml
