--- a/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration.yaml
+++ b/bolt-api/subsystems/hasura/metadata/databases/default/tables/public_configuration.yaml
@@ -128,6 +128,8 @@ select_permissions:
         - prometheus_url
         - test_source_id
         - type_slug
+        - prometheus_password
+        - prometheus_user
       filter:
         _and:
           - project:
